--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
@@ -13,37 +12,76 @@
             android:orientation="vertical">
 
             <!-- TODO: Update blank fragment layout -->
+            <ToggleButton
+                android:id="@+id/toggle_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="Not Favorite"
+                android:textOn="Favorite" />
+
             <TextView
-                android:id="@+id/movieID"
+                android:id="@+id/movie_title"
                 android:layout_width="match_parent"
 
                 android:layout_height="wrap_content"
                 android:text="@{movie.title}" />
 
-            <TextView
+            <ImageView
+                android:id="@+id/image_detail"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{movie.image}" />
+                android:text="--------------"
+                android:textColor="@color/colorPrimary" />
 
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@{movie.releaseDate}"
+    />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="--------------"
+                android:textColor="@color/colorPrimary" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{movie.userRating}"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="--------------"
+                android:textColor="@color/colorPrimary" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{movie.synopsis}" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/recycler_review_list"/>
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="--------------"/>
+                android:text="--------------"
+                android:textColor="@color/colorPrimary" />
+
+
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_review_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/recycler_trailer_list"/>
+                android:text="--------------"
+                android:textColor="@color/colorPrimary" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_trailer_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
     </ScrollView>
