--- a/app/src/main/res/menu/list_menu.xml
+++ b/app/src/main/res/menu/list_menu.xml
@@ -20,5 +20,11 @@
         android:orderInCategory="3"
         android:title="@string/menu_favourite"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/update_data"
+        android:icon="@drawable/ic_action_refresh"
+        android:orderInCategory="4"
+        android:title="@string/menu_update"
+        app:showAsAction="always" />
 
 </menu>
