--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,9 @@
         <argument
             android:name="movieID"
             app:argType="string" />
+        <argument
+            android:name="movieName"
+            app:argType="string"
+             />
     </fragment>
 </navigation>
