--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -80,7 +80,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_review_list"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -91,7 +92,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_trailer_list"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"/>
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
@@ -103,15 +105,15 @@
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
 
                 <ImageView
+                    android:id="@+id/image_appbar"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:id="@+id/image_appbar"
-                    app:layout_collapseMode="parallax"
-                    />
+                    app:layout_collapseMode="parallax" />
+
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/detail_toolbar"
                     android:layout_width="match_parent"
